--- a/index.html
+++ b/index.html
@@ -343,8 +343,14 @@
 
           <article class="our-product">
             <div class="our-product-img-wrp">
-              <img class="our-product-img" src="images/shop-item-desk1.jpg" alt="Картинка Подушки на диване">
+              <picture>
+                <source media="(min-width: 1201px)" srcset="images/shop-item-desk1.jpg">
+                <source media="(min-width: 641px) and (max-width: 1200px)" srcset="images/shop-item-tablet1.jpg">
+                <source media="(max-width: 640px)" srcset="images/shop-item-mobile1.jpg">
+                <img class="our-product-img" src="images/shop-item-desk1.jpg" alt="Картинка Подушки на диване">
+              </picture>
             </div>
+
             <div class="our-product-description">
               <h3 class="our-product-title">
                 Подушки на диван
@@ -369,7 +375,12 @@
 
           <article class="our-product">
             <div class="our-product-img-wrp">
-              <img class="our-product-img" src="images/shop-item-desk2.jpg" alt="Картинка Кукла «Зайчик»">
+              <picture>
+                <source media="(min-width: 1201px)" srcset="images/shop-item-desk2.jpg">
+                <source media="(min-width: 641px) and (max-width: 1200px)" srcset="images/shop-item-tablet2.jpg">
+                <source media="(max-width: 640px)" srcset="images/shop-item-mobile2.jpg">
+                <img class="our-product-img" src="images/shop-item-desk2.jpg" alt="Картинка Кукла «Зайчик»">
+              </picture>
             </div>
             <div class="our-product-description">
               <h3 class="our-product-title">
@@ -382,7 +393,7 @@
               </p>
               <div class="our-product-shop">
                 <div class="our-product-price">
-                  <p class="our-product-price-old">500 &#8381;</p>
+                  <!-- <p class="our-product-price-old">500 &#8381;</p> -->
                   <p class="our-product-price-new">3500 &#8381;</p>
                 </div>
                 <div class="our-product-botomm">
@@ -396,7 +407,12 @@
 
           <article class="our-product">
             <div class="our-product-img-wrp">
-              <img class="our-product-img" src="images/shop-item-desk3.jpg" alt="Картинка Шестиугольная рамка">
+              <picture>
+                <source media="(min-width: 1201px)" srcset="images/shop-item-desk3.jpg">
+                <source media="(min-width: 641px) and (max-width: 1200px)" srcset="images/shop-item-tablet3.jpg">
+                <source media="(max-width: 640px)" srcset="images/shop-item-mobile3.jpg">
+                <img class="our-product-img" src="images/shop-item-desk3.jpg" alt="Картинка Шестиугольная рамка">
+              </picture>
             </div>
             <div class="our-product-description">
               <h3 class="our-product-title">
